<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:focusable="false">
    <RelativeLayout
        android:id="@+id/control_main_layout"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:focusable="false"
            android:layout_alignParentTop="true"
            >
            <TextView
                android:focusable="false"
                android:id="@+id/title_video"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_58"
                android:paddingTop="@dimen/dp_18"
                android:paddingLeft="@dimen/dp_52"
                android:text=""
                android:gravity="center_vertical|left"
                android:textSize="@dimen/sp_24"
                android:textColor="@color/c_f0f"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/x10"
            android:paddingBottom="@dimen/x10"
            android:orientation="vertical"
            android:focusable="false"
            android:background="#99000000"
            android:layout_alignParentBottom="true"
            >
            <LinearLayout
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:padding="@dimen/x20"
                >

                <TextView
                    android:focusable="false"
                    android:id="@+id/current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/x20"
                    android:text="00:00"
                    android:textSize="@dimen/sp_18"
                    android:textColor="@color/c_f0f" />

                <com.hr.musicktv.widget.seek.TvSeekBarView
                    android:layout_weight="1"
                    android:id="@+id/progress"
                    android:focusable="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/x20"
                    android:layout_marginLeft="@dimen/x20"
                    />

                <TextView
                    android:focusable="false"
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/x20"
                    android:text="00:00"
                    android:textSize="@dimen/sp_18"
                    android:textColor="@color/c_f0f" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:paddingBottom="@dimen/x20"
                android:paddingLeft="@dimen/x40"
                android:paddingRight="@dimen/x40"
                >
                <Button
                    android:id="@+id/btn_pause"
                    android:text="@string/mk_pause"
                    style="@style/mk_btn_con" />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_1"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/btn_rebroadcast"
                    android:text="@string/mk_rebroadcast"
                    style="@style/mk_btn_con" />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_1"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/btn_next_song"
                    android:text="@string/mk_next_song"
                    style="@style/mk_btn_con" />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_1"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/btn_original_singer"
                    android:text="@string/mk_original_singer"
                    style="@style/mk_btn_con" />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_1"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/btn_accompany"
                    android:text="@string/mk_accompany"
                    style="@style/mk_btn_con" />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_1"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/btn_up_tune"
                    android:text="@string/mk_up_tune"
                    style="@style/mk_btn_con" />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_1"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/btn_down_tune"
                    android:text="@string/mk_down_tune"
                    style="@style/mk_btn_con" />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_1"
                    android:layout_weight="1"
                    />
                <Button
                    android:id="@+id/btn_song_list"
                    android:text="@string/mk_song_list"
                    style="@style/mk_btn_con" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>


    <com.hr.musicktv.widget.layout.LoadingLayout
        android:id="@+id/load_relayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    </com.hr.musicktv.widget.layout.LoadingLayout>


</RelativeLayout>