<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/layout_title_child"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        <com.hr.musicktv.widget.layout.RoundLineLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/x40"
            app:rfl_radius="@dimen/rfl_radius"
            android:background="@color/c_tttt"
            android:orientation="vertical"
            >
            <TextView
                android:layout_margin="@dimen/x60"
                android:id="@+id/tv_title_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_18"
                android:textColor="@color/c_f0f"
                android:text=""
                />
            <TextView
                android:layout_marginLeft="@dimen/x80"
                android:id="@+id/tv_user_say_more"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/sp_16"
                android:textColor="@color/c_f0f"
                android:text=""
                />

        </com.hr.musicktv.widget.layout.RoundLineLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/x20"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.hr.musicktv.widget.layout.RoundLineLayout
                    app:rfl_radius="@dimen/rfl_radius"
                    android:id="@+id/layout_played_videos"
                    style="@style/round_layout_user_center">
                    <ImageView
                        android:background="@drawable/foc_image_played_videos"
                        style="@style/image_user_center" />
                    <TextView
                        android:text="@string/svp_recently_played_videos"
                        style="@style/tv_user_center" />

                </com.hr.musicktv.widget.layout.RoundLineLayout>

                <com.hr.musicktv.widget.layout.RoundLineLayout
                    app:rfl_radius="@dimen/rfl_radius"
                    android:id="@+id/layout_favorite"
                    style="@style/round_layout_user_center">
                    <ImageView
                        android:background="@drawable/foc_image_favorite"
                        style="@style/image_user_center" />
                    <TextView
                        android:text="@string/svp_favorite"
                        style="@style/tv_user_center" />

                </com.hr.musicktv.widget.layout.RoundLineLayout>

                <com.hr.musicktv.widget.layout.RoundLineLayout
                    app:rfl_radius="@dimen/rfl_radius"
                    android:id="@+id/layout_recharge_center"
                    style="@style/round_layout_user_center">
                    <ImageView
                        android:background="@drawable/foc_image_recharge"
                        style="@style/image_user_center" />
                    <TextView
                        android:text="@string/svp_recharge_center"
                        style="@style/tv_user_center" />

                </com.hr.musicktv.widget.layout.RoundLineLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.hr.musicktv.widget.layout.RoundLineLayout
                    app:rfl_radius="@dimen/rfl_radius"
                    android:id="@+id/layout_help_center"
                    style="@style/round_layout_user_center">
                    <ImageView
                        android:background="@drawable/foc_image_help"
                        style="@style/image_user_center" />
                    <TextView
                        android:text="@string/svp_help_center"
                        style="@style/tv_user_center" />

                </com.hr.musicktv.widget.layout.RoundLineLayout>

                <com.hr.musicktv.widget.layout.RoundLineLayout
                    app:rfl_radius="@dimen/rfl_radius"
                    android:id="@+id/layout_about_men"
                    style="@style/round_layout_user_center">
                    <ImageView
                        android:background="@drawable/foc_image_about"
                        style="@style/image_user_center" />
                    <TextView
                        android:text="@string/svp_about_men"
                        style="@style/tv_user_center" />

                </com.hr.musicktv.widget.layout.RoundLineLayout>

                <com.hr.musicktv.widget.layout.RoundLineLayout
                    app:rfl_radius="@dimen/rfl_radius"
                    style="@style/round_layout_user_center"
                    android:visibility="invisible"
                    >
                    <ImageView
                        android:background="@drawable/foc_image_two"
                        style="@style/image_user_center" />
                    <TextView
                        android:text="@string/svp_recharge_center"
                        style="@style/tv_user_center" />

                </com.hr.musicktv.widget.layout.RoundLineLayout>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>



</LinearLayout>