<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include layout="@layout/layout_title_child"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/x500"
            android:orientation="horizontal"
            >
                <ImageView
                    android:layout_weight="1"
                    android:layout_margin="@dimen/x40"
                    android:focusable="true"
                    android:clickable="true"
                    android:id="@+id/image_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/hehe"
                    android:scaleType="fitXY"
                    />
            <LinearLayout
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="@dimen/x60"
                android:layout_marginTop="@dimen/x40"
                android:layout_marginRight="@dimen/x40"
                >

                    <TextView
                        android:id="@+id/tv_video_introduction"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/c_f0f"
                        />

                    <TextView
                        android:id="@+id/tv_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:textColor="@color/c_f0f"
                        />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="end"
                    >
                    <Button
                        android:id="@+id/btn_player"
                        android:text="@string/svp_play"
                        style="@style/btn_detail" />
                    <Button
                        android:id="@+id/btn_collect"
                        android:text="@string/svp_collect"
                        style="@style/btn_detail"
                        />
                    <Button
                        android:id="@+id/btn_like"
                        android:text="@string/svp_like"
                        style="@style/btn_detail"
                        />
                    <Button
                        android:id="@+id/btn_stamp"
                        android:text="@string/svp_stamp"
                        style="@style/btn_detail"
                        />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/com_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
                <com.hr.musicktv.widget.tablayout.TvTabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/x60"
                    android:layout_marginLeft="@dimen/x40"
                    app:tabIndicatorResId="@drawable/foc_back_four"
                    app:tabIndicatorGravity="bottom"
                    app:tabIndicatorHeight="@dimen/x4"
                    app:tabGravity="center"
                    app:tabTexSize="16sp"
                    app:tabTextColor="@drawable/selector_tab_font_color"
                    app:tabScrollMode="fixed"/>

            <com.owen.tvrecyclerview.widget.TvRecyclerView
                android:paddingTop="@dimen/x20"
                android:paddingBottom="@dimen/x20"
                android:paddingLeft="@dimen/x40"
                android:paddingRight="@dimen/x40"
                android:layout_gravity="center"
                android:id="@+id/select_collect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:spanCount="10"
                app:tv_layoutManager="V7GridLayoutManager"
                />
        </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/layout_select"
        android:background="@drawable/layout_back_two"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="评论："
            android:textColor="@color/c_f0f"
            android:layout_marginLeft="@dimen/x40"
            />
        <ImageView
            android:duplicateParentState="true"
            android:layout_centerHorizontal="true"
            android:layout_width="@dimen/x100"
            android:layout_height="@dimen/x40"
            android:background="@drawable/selector_image_shrink"
            />
        <com.owen.tvrecyclerview.widget.TvRecyclerView
            android:paddingTop="@dimen/x40"
            android:paddingBottom="@dimen/x20"
            android:paddingLeft="@dimen/x40"
            android:paddingRight="@dimen/x40"
            android:id="@+id/tv_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:tv_selectedItemIsCentered="true"
            style="@style/oneWayView"
            android:orientation="vertical"
            app:spanCount="1"
            app:tv_layoutManager="V7GridLayoutManager"/>

    </RelativeLayout>


</LinearLayout>